@@ -49,7 +49,7 @@ PKG_CHECK_MODULES(YELP,
 	gconf-2.0
 	gnome-doc-utils
 	gnome-vfs-2.0 >= 1.1
-	gtk+-2.0 >= 2.3.1
+	gtk+-2.0 >= 2.5.3
 	libbonobo-2.0 >= 1.108.0
 	libglade-2.0 >= 2.0.0
 	libgnome-2.0 >= 2.0.2
