@@ -1,5 +1,13 @@
 2004-10-18  Shaun McCance  <shaunm@gnome.org>
 
+	* configure.in:
+	* src/yelp-main.c:
+	* src/yelp-window.c:
+	- Using gtk_window_set_default_icon_name
+	- Using GtkAboutDialog
+
+2004-10-18  Shaun McCance  <shaunm@gnome.org>
+
 	* data/yelp.schemas.in:
 	- Forgot to add this to CVS
 
